update exercise for VCF

--- a/assignment/Solutions_project.ipynb
+++ b/assignment/Solutions_project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,12 @@
    "source": [
     "# Open the reference file (fasta) and loop through it, removing the first line (starts with >)\n",
     "# Sum the length of the lines, removing the newline character\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
-    "length = 0\n",
-    "for line in f:\n",
-    "    if not line.startswith(\">\"):\n",
-    "        length += len(line.strip()) # add the length of the line, without newline character\n",
-    "print(length)\n",
-    "f.close()"
+    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r') as f:\n",
+    "    length = 0\n",
+    "    for line in f:\n",
+    "        if not line.startswith(\">\"):\n",
+    "            length += len(line.strip()) # add the length of the line, without newline character\n",
+    "    print(length)\n"
    ]
   },
   {
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -62,15 +61,14 @@
    "source": [
     "# Open the GTF file and loop throught it.\n",
     "# To find the genes, check the 3rd element of each line and add 1 if the feature is \"gene\"\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
-    "genes = 0\n",
-    "for line in g:\n",
-    "    if not line.startswith(\"#\"):\n",
-    "        feature = line.split(\"\\t\")[2]\n",
-    "        if feature == \"gene\":\n",
-    "            genes +=1\n",
-    "print(genes)\n",
-    "g.close()"
+    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r') as g:\n",
+    "    genes = 0\n",
+    "    for line in g:\n",
+    "        if not line.startswith(\"#\"):\n",
+    "            feature = line.split(\"\\t\")[2]\n",
+    "            if feature == \"gene\":\n",
+    "                genes +=1\n",
+    "    print(genes)"
    ]
   },
   {
@@ -112,7 +110,7 @@
     "# To find the number of transcripts, check the 3rd element for \"transcript\" while the specific gene exists\n",
     "# Can also be solved with bash using: \n",
     "# cat Homo_sapiens.GRCh38.93.gtf | grep ENSG00000001626 | grep \"\\ttranscript\\t\" | wc -l\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "# Find number of transcripts\n",
     "transcripts = 0\n",
@@ -151,7 +149,7 @@
     "# Find all the instances of transcripts for specific gene\n",
     "# For each of them, extract the transcript id (column 8) and the length (column 4 - column 3 + 1)\n",
     "# If longer than previous longest, store it and continue\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "# Find longest transcript\n",
     "longest_transcript = (0, '') # update the list with length and transcript ID with a for loop\n",
@@ -197,7 +195,7 @@
     "# Save the whole sequence from the fasta file to a variable\n",
     "# and get the start-1 to end from this variable \n",
     "# (incl. its start and end positions)\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "for line in g:\n",
     "    if not line.startswith(\"#\"):\n",
@@ -213,7 +211,7 @@
     "g.close()\n",
     "\n",
     "# Extract the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "# Store the DNA sequence of chromosome 7 in a variable\n",
     "seqList = []\n",
@@ -284,7 +282,7 @@
     "# Create a variable from the other file, like in the previous question\n",
     "# Loop through the set in the other file and pick the positions of the exons\n",
     "# Get the longest transcript and its exons\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "exons = []\n",
     "\n",
@@ -302,7 +300,7 @@
     "g.close()\n",
     "\n",
     "# Extract all exons of the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "seqList = [] # store the DNA sequence of chromosome 7 in a list\n",
     "for line in f:\n",
@@ -314,7 +312,7 @@
     "\n",
     "mRNA = \"\" # add exon sequences to string\n",
     "for exon in exons:\n",
-    "    mRNA += chr7[exon[0]-1:exon[1]]\n",
+    "    mRNA += chr7[exon[0]-1 : exon[1]]\n",
     "\n",
     "print(mRNA[:10], \"...\")\n",
     "\n",
@@ -372,7 +370,7 @@
    ],
    "source": [
     "# Get the longest transcript incl. its start and stop codon positions\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "for line in g:\n",
     "    if not line.startswith(\"#\"):\n",
@@ -389,7 +387,7 @@
     "g.close()\n",
     "\n",
     "# Extract all start and stop codon of the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "seqList = [] # store the DNA sequence of chromosome 7 in a list\n",
     "for line in f:\n",
@@ -434,7 +432,7 @@
    ],
    "source": [
     "# Get the longest transcript and its exons, as well as the start codon\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "exons = []\n",
     "\n",
@@ -460,7 +458,7 @@
     "g.close()\n",
     "\n",
     "# Extract all exons of the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "seqList = [] # store the DNA sequence of chromosome 7 in a list\n",
     "for line in f:\n",
@@ -522,20 +520,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sequence of patient  3  has a different length than the reference genome sequence.\n"
+      "The sequence of patient  1  has a different length than the reference genome sequence.\n",
+      "patient gene length :113\n",
+      "reference gene length: 1480\n"
      ]
     }
    ],
    "source": [
     "# Get the longest transcript and its exons, as well as the start codon\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "exons = []\n",
     "\n",
@@ -559,7 +559,7 @@
     "g.close()\n",
     "\n",
     "# Extract all exons of the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "seqList = [] # store the DNA sequence of chromosome 7 in a list\n",
     "for line in f:\n",
@@ -584,23 +584,24 @@
     "\n",
     "i = 1 # index for loop through patient fasta files\n",
     "while i < 6:\n",
-    "    p = open(\"Patient\" + str(i) + \".fa\", 'r')\n",
-    "    patientSeqList = [] # store the DNA sequence of the patient in a list\n",
-    "    for line in p:\n",
-    "        if not line.startswith(\">\"):\n",
-    "            patientSeqList.append(line.strip())\n",
-    "    patientSeq = \"\".join(patientSeqList) # construct one sequence for the currently analyzed patient\n",
+    "    patient_seqfile = f\"../assignment/uncompressed-data/Patient{i}.fa\"\n",
+    "    with open(patient_seqfile, \"r\") as p:\n",
+    "        patientSeqList = [] # store the DNA sequence of the patient in a list\n",
+    "        for line in p:\n",
+    "            if not line.startswith(\">\"):\n",
+    "                patientSeqList.append(line.strip())\n",
+    "        patientSeq = \"\".join(patientSeqList) # construct one sequence for the currently analyzed patient\n",
     "\n",
-    "    patientmRNA = \"\" # append exon sequences to string. Works only for small strings.\n",
-    "    for exon in exons:\n",
-    "        patientmRNA += patientSeq[exon[0]-1:exon[1]]\n",
+    "        patientmRNA = \"\" # append exon sequences to string. Works only for small strings.\n",
+    "        for exon in exons:\n",
+    "            patientmRNA += patientSeq[exon[0]-1:exon[1]]\n",
     "\n",
-    "    # Translate to aminoacids\n",
-    "    patient_aminoacids = translate_dna(patientmRNA[start:]) # translate the mRNA sequence from the start codon on\n",
-    "    if not len(patient_aminoacids) == len(aminoacids):\n",
-    "        print(\"The sequence of patient \", str(i), \" has a different length than the reference genome sequence.\")\n",
-    "\n",
-    "    p.close()\n",
+    "        # Translate to aminoacids\n",
+    "        patient_aminoacids = translate_dna(patientmRNA[start:]) # translate the mRNA sequence from the start codon on\n",
+    "        if not len(patient_aminoacids) == len(aminoacids):\n",
+    "            print(\"The sequence of patient \", str(i), \" has a different length than the reference genome sequence.\")\n",
+    "            print(f\"patient gene length :{len(patient_aminoacids)}\")\n",
+    "            print(f\"reference gene length: {len(aminoacids)}\")\n",
     "    i += 1"
    ]
   },
@@ -613,24 +614,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sequence of patient  3  has a different length than the reference genome sequence.\n"
+      "The sequence of patient  1  has a different length than the reference genome sequence.\n",
+      "patient gene length :113\n",
+      "reference gene length: 1480\n"
      ]
     }
    ],
    "source": [
     "from Bio import SeqIO\n",
     "from Bio.Seq import Seq\n",
-    "from Bio.Alphabet import IUPAC\n",
     "\n",
     "# Get the longest transcript and its exons, as well as the start codon\n",
-    "g = open(\"Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
+    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
     "\n",
     "exons = []\n",
     "\n",
@@ -655,7 +657,7 @@
     "\n",
     "\n",
     "# Extract all exons of the longest transcript sequence from the genome fasta file\n",
-    "f = open(\"Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
+    "f = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r')\n",
     "\n",
     "records = list(SeqIO.parse(f, \"fasta\")) # BioPython\n",
     "if records[0].id == \"7\":  # BioPython\n",
@@ -664,7 +666,7 @@
     "f.close()\n",
     "\n",
     "\n",
-    "mRNA = \"\" # add exon sequences to string\n",
+    "mRNA = Seq(\"\") # add exon sequences to string\n",
     "for exon in exons:\n",
     "    mRNA += chr7[exon[0]-1:exon[1]]\n",
     "\n",
@@ -678,8 +680,8 @@
     "\n",
     "i = 1 # index for loop through patient fasta files\n",
     "while i < 6:\n",
-    "    p = \"Patient\" + str(i) + \".fa\"\n",
-    "    patientRecords = list(SeqIO.parse(p, \"fasta\")) # BioPython\n",
+    "    patient_seqfile = f\"../assignment/uncompressed-data/Patient{i}.fa\"\n",
+    "    patientRecords = list(SeqIO.parse(patient_seqfile, \"fasta\")) # BioPython\n",
     "    if patientRecords[0].id == \"7\":  # BioPython\n",
     "        patientSeq = patientRecords[0].seq # BioPython\n",
     "\n",
@@ -692,9 +694,17 @@
     "    \n",
     "    if not len(patient_aminoacids) == len(aminoacids):\n",
     "        print(\"The sequence of patient \", str(i), \" has a different length than the reference genome sequence.\")\n",
-    "\n",
+    "        print(f\"patient gene length :{len(patient_aminoacids)}\")\n",
+    "        print(f\"reference gene length: {len(aminoacids)}\")\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
