--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -692,11 +692,44 @@
     }
    },
    "source": [
-    "### What is your input?\n",
+    "### What is your input? \n",
+    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px;\"/> \n",
     "\n",
-    "A VCF file that is iterable\n",
+    "- __CHROM__: 1 (Chromosome 1)\n",
+    "- __POS__: 10177 (Position 10177 on the chromosome)\n",
+    "- __ID__: rs367896725 (Reference SNP ID)\n",
+    "- __REF__: A (Reference allele is A)\n",
+    "- __ALT__: AC (Alternative allele is AC)\n",
+    "- __QUAL__: 50 (Quality score)\n",
+    "- __FILTER__: PASS (status, meaning passed all quality control)\n",
+    "- __FORMAT__: GT:DP:CB (Genotype, Depth, Cell Barcode)\n",
+    "- __SAMPLES__: 0/1:30:SM(Sample genotypes and additional info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Genotype field\n",
+    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px;\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__`0/1`__\n",
+    "- For human, and many other organisms, there are two copies of genetic information, inherited from both parents.\n",
+    "- `0` means DNA at this position is the same as reference allele (`A`), \n",
+    "- `1` means has alternative allele, in this case `AC` \n",
     "\n",
-    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1400px;\"/> "
+    "__The notation of alternative allele is not always `1`__\n",
+    "- `0/2`\n",
+    "- `2` means it is the second alternative allele, i.e. `C` in this case"
    ]
   },
   {
