--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -2865,14 +2865,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
-    "AI is getting increasingly popular with the break through of LLM (large language modules), the most prominent is ChatGPT. China also have the similar AI chatbot WenxinYiyan. \n",
+    "The field of Artificial Intelligence (AI) has experienced a remarkable surge in popularity, largely driven by breakthroughs in Large Language Models (LLMs). ChatGPT, developed by OpenAI, stands out as one of the most prominent examples of this technology. Similarly, China's tech ecosystem has introduced its own formidable AI chatbot, Wenxin Yiyan, showcasing the global interest and advancements in AI.\n",
     "\n",
-    "Just like search engine like Google terminated the labrouse library searching and dictionary searching technique, AGI, represented by ChatGPT will also revolutionarize the way we work, learn and educate. \n",
+    "Just as search engines like Google have made traditional library searches and leafing through dictionaries obsolete, AI systems, epitomized by platforms like ChatGPT, are set to fundamentally transform our methods of working, learning, and teaching.\n",
     "\n",
-    "\n",
-    "The tool is there, so we should not ingore it. "
+    "As these tools become an integral part of the technological landscape, embracing and integrating them into our practices is not only beneficial—it's imperative for staying at the forefront of innovation. Let's explore how AI can enhance the bioinformatics field and how we can harness its full potential in our work."
    ]
   },
   {
@@ -2883,13 +2886,23 @@
     }
    },
    "source": [
-    "## AI can program can understand natural language\n",
+    "### (AI) Artificial Intelligence: A Global Phenomenon\n",
     "\n",
-    "Task:\n",
-    "\n",
-    "I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the resutl in the following format\n",
-    "\n",
-    "seqid seqlength"
+    "<img src=\"img/Chatgpt-Users-Growth.png\" alt=\"User Growth\" style=\"floating: right;width: 500px;\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "- The market price for Nvidia has once overtake Microsoft and became the most valuable company in the world.\n",
+    "- Every grant application has a higher chance to be accepted if it talks about AI\n",
+    "- The number of users has reached over 100 million now\n",
+    "- Threads is a social media conversation tool backed up by Facebook instgram etc"
    ]
   },
   {
@@ -2900,7 +2913,102 @@
     }
    },
    "source": [
-    "## So why do we learn Python"
+    "## What AI can do\n",
+    "- Helping with decision-making, automation, and data analysis.\n",
+    "- Creating Art work\n",
+    "- Assisting in health care\n",
+    "- Self-driving car \n",
+    "- Serving as a good friend, mentor\n",
+    "- __Helping with programmming__ (this is what we care in this course)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: Let's take a look at the function that we have used as example during the course \n",
+    "get_seqlen\n",
+    "\n",
+    "I copy the instruction in the AI bot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## AI can program when instructed with natural language\n",
+    "\n",
+    "#### Task:\n",
+    "\n",
+    "I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the result in the following format\n",
+    "\n",
+    "seqid seqlength\n",
+    "\n",
+    "#### input the above instruction to both WenXinYiYan and ChatGPT. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Code from WenXinYiDian does not use the seqID properly, instead if used the whole description line as SeqID\n",
+    "\n",
+    "ChatGPT not only show the code with BioPython properly but also give explanations and exampels. \n",
+    "\n",
+    "Understanding the fundamentals of Python, or any programming language, remains crucial even in the era of AI-assisted coding. Here are several reasons why:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## So why do we still need to learn Python\n",
+    "\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What is the best way to instruct AI to achieve you goal\n",
+    "\n",
+    "__A new profession: prompt engineering__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### AI as Your Learning Partner\n",
+    "\n",
+    "- Interactive Q/A\n",
+    "- Continuous education through AI-curated content.\n",
+    "- Expanding knowledge and skills with AI's adaptive resources."
    ]
   },
   {
@@ -2969,7 +3077,7 @@
     }
    },
    "source": [
-    "## Conclusion remarks"
+    "# Conclusion remarks"
    ]
   },
   {
@@ -3003,7 +3111,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Show the curve \n",
     "\n",
@@ -3012,7 +3124,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The learning curve is high, but the forgetting curse is also sharp. I hope in the next few months, you can keep practicing the knowlegement you have learned and use AI as your learning parter to overcome the the quick decling of knowlegement you have leared these days"
    ]
