--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -2959,6 +2959,30 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### For more complicated tasks, AI may not work as expected\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### A practical procedure \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "skip"
     }
    },
@@ -2980,7 +3004,12 @@
    "source": [
     "## So why do we still need to learn Python\n",
     "\n",
-    "- "
+    "- AI has limitations and can generate incorrect or suboptimal code\n",
+    "    - Understanding the fundamentals allows you to identify, troubleshoot, and fix these issues.\n",
+    "- Learning programming fundamentals helps develop problem-solving skills and algorithmic thinking\n",
+    "    - You need to guide AI with algorithmic thinking so that AI can generate expected result\n",
+    "- AI still lacks true innovation \n",
+    "    - It generates code based on existing patterns and data"
    ]
   },
   {
@@ -2993,7 +3022,32 @@
    "source": [
     "## What is the best way to instruct AI to achieve you goal\n",
     "\n",
+    "\n",
     "__A new profession: prompt engineering__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: if all programmars are soly dependent on AI, code will be more and more alike\n",
+    "\n",
+    "researchers can directly practice their idea with programs without the need to have laborous programming training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pros and Cons of using AI\n",
+    "#### Pros\n",
+    "- Increased productivity\n",
+    "- Improved accuracy - many typos and obvious errors will be eliminated\n",
+    "- AI makes programming accessible to those with no programming skills, \n",
+    "#### Cons\n",
+    "- Limited creativity\n",
+    "- Bias and inaccuracy \n",
+    "- Replying too much on AI can cause people lack of imaginagtion and cirtical thinking"
    ]
   },
   {
