--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -2976,7 +2976,44 @@
    },
    "source": [
     "### A practical procedure \n",
-    "\n"
+    "\n",
+    "<img src=\"img/work-with-AI-flowchart.png\" alt=\"AI flowchart\" style=\"floating: right;width: 450px;\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- There is actually a type of job: __prompt engineer__ - designs and refines prompts for LLMs to accomplish the tasks "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### AI can be integrated into the text editors, e.g. \n",
+    "\n",
+    "- Github Copilot\n",
+    "    - developed by GitHub in collab with OpenAI\n",
+    "    - provides context-aware code suggestions \n",
+    "    - help writing code, debugging\n",
+    "- IntelliCode\n",
+    "    - by Microsoft\n",
+    "    - provides context-aware code suggestions\n",
+    "- Tabnine\n",
+    "    - code completion tool\n",
+    "- Kite\n",
+    "    - helps with code completion, error correction, and code navigation\n",
+    "\n",
+    "It can generate or predict the code while you are programming \n"
    ]
   },
   {
@@ -3002,7 +3039,7 @@
     }
    },
    "source": [
-    "## So why do we still need to learn Python\n",
+    "### Why do we still need to learn Python if AI can program?\n",
     "\n",
     "- AI has limitations and can generate incorrect or suboptimal code\n",
     "    - Understanding the fundamentals allows you to identify, troubleshoot, and fix these issues.\n",
@@ -3016,19 +3053,9 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
-   "source": [
-    "## What is the best way to instruct AI to achieve you goal\n",
-    "\n",
-    "\n",
-    "__A new profession: prompt engineering__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Note: if all programmars are soly dependent on AI, code will be more and more alike\n",
     "\n",
@@ -3037,14 +3064,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Pros and Cons of using AI\n",
-    "#### Pros\n",
+    "### Pros\n",
     "- Increased productivity\n",
     "- Improved accuracy - many typos and obvious errors will be eliminated\n",
-    "- AI makes programming accessible to those with no programming skills, \n",
-    "#### Cons\n",
+    "- AI makes programming accessible to those with no programming skills\n",
+    "    - Researcher without a solid programming trainning can directly practice their ideas with programs. \n",
+    "### Cons\n",
     "- Limited creativity\n",
     "- Bias and inaccuracy \n",
     "- Replying too much on AI can cause people lack of imaginagtion and cirtical thinking"
@@ -3054,73 +3085,49 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: do you still remember these figures I showed at the beginning of the course "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "### AI as Your Learning Partner\n",
+    "<div style=\"display: flex; flex-direction: column; align-items: center;\">\n",
+    "  <img src=\"img/research_fields.png\" style=\"max-width: 100%; height: auto; margin-bottom: 10px;\" />\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  <div style=\"display: flex; width: 100%; justify-content: space-between;\">\n",
+    "    <img src=\"img/programming_experience.png\" style=\"floating: left; width: 300px;\" />\n",
+    "    <img src=\"img/bioinformatics_experience.png\" style=\"floating: right; width: 450px;\" />\n",
+    "  </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Exercise (15 min)\n",
+    "Create the same figure using AI, given the Excel file <a href=\"python-bioinfo.bioshu.se/lectures/student_survey.xlsx\">python-bioinfo.bioshu.se/lectures/student_survey.xlsx</a>\n",
     "\n",
-    "- Interactive Q/A\n",
-    "- Continuous education through AI-curated content.\n",
-    "- Expanding knowledge and skills with AI's adaptive resources."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## The instructin should be clear and direct"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## For complitcated tasks, divide the tasks in smaller subtasks and guide AI to reach the final goal\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Drawback of using AI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using AI as your learning parterner \n",
-    "\n",
-    "For the code you don't understand, ask AI to analyze it"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## copilot demo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Mini exercise (15 min)\n",
     "___\n",
-    "### Take a short break before our last lecture"
+    "#### Take a break before summary"
    ]
   },
   {
@@ -3131,14 +3138,14 @@
     }
    },
    "source": [
-    "# Conclusion remarks"
+    "## Summary"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -3158,9 +3165,9 @@
     }
    },
    "source": [
-    "With the emering of AI, effort to memorize usage of numeras moduels and methods is meaningless, unless efficiency is the main target of your programming. \n",
-    "\n",
-    "Instead, the ability to raise the question, suggest steps to solve the question is more important \n"
+    "- With the emergence of AI chatbot like ChatGPT, the effort to memorize the usage of numerous modules and methods is meaningless, unless efficiency is the main target of your programming.\n",
+    "- Instead, the ability to raise the question and suggest steps to solve the question is more important.\n",
+    "- It is important to build a broad domain knowledge to effectively instruct and leverage AI tools.\n"
    ]
   },
   {
@@ -3171,9 +3178,21 @@
     }
    },
    "source": [
-    "Show the curve \n",
-    "\n",
-    "and mark the reference"
+    "### The learning and forgetting curve\n",
+    "<img src=\"img/learning_curve.png\" style=\"width: 600px;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Use it in your research\n",
+    "- Discuss it with your colleagues\n",
+    "- AI as your learning parter\n"
    ]
   },
   {
@@ -3184,15 +3203,19 @@
     }
    },
    "source": [
-    "The learning curve is high, but the forgetting curse is also sharp. I hope in the next few months, you can keep practicing the knowlegement you have learned and use AI as your learning parter to overcome the the quick decling of knowlegement you have leared these days"
+    "# Thank you!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: many thanks to the organiers, to"
+   ]
   }
  ],
  "metadata": {
