--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -3214,7 +3214,7 @@
     }
    },
    "source": [
-    "Note: many thanks to the organiers, to"
+    "Note: many thanks to the organiers, to all the brillant TAs and to you all have been actively involved in learning and discussion. Thank you very much!"
    ]
   }
  ],
