--- a/lectures/Day_5.ipynb
+++ b/lectures/Day_5.ipynb
@@ -2948,9 +2948,7 @@
     "\n",
     "#### Task:\n",
     "\n",
-    "I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the result in the following format\n",
-    "\n",
-    "seqid seqlength\n",
+    "Write a Python script that calculate sequence length given a fasta file\n",
     "\n",
     "#### input the above instruction to both WenXinYiYan and ChatGPT. "
    ]
@@ -2963,7 +2961,29 @@
     }
    },
    "source": [
-    "### For more complicated tasks, AI may not work as expected\n",
+    "## Rephrase the prompt run again\n",
+    "\n",
+    "I have a sequence file in fasta format. The file may contain multiple sequences. Write a Python script that can take the sequence as an argument from the command line and print the result in the following format\n",
+    "\n",
+    "seqid seqlength"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## For more complicated tasks, AI may not work as expected\n",
+    "\n",
+    "### Task:\n",
+    "\n",
+    "I have sequenced the whole genome of a patient using Illumina. The raw data are in these fastq files. \n",
+    "Write python script to assemble these into a whole genome and annotate it.\n",
+    "also find all biomarkers that are related to type 2 diabetes.\n",
+    "\n",
     "\n"
    ]
   },
@@ -3165,9 +3185,25 @@
     }
    },
    "source": [
+    "### Learning programming in the post-AI era\n",
+    "\n",
+    "- __AI Chatbots__: Memorizing numerous modules and methods is less important unless efficiency is key.\n",
+    "- __Critical Thinking__: Prioritize raising questions and suggesting solutions.\n",
+    "- __Domain Knowledge__: Essential for effectively instructing and leveraging AI tools.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note:\n",
     "- With the emergence of AI chatbot like ChatGPT, the effort to memorize the usage of numerous modules and methods is meaningless, unless efficiency is the main target of your programming.\n",
-    "- Instead, the ability to raise the question and suggest steps to solve the question is more important.\n",
-    "- It is important to build a broad domain knowledge to effectively instruct and leverage AI tools.\n"
+    "- The ability to raise the question and suggest steps to solve the question is more important.\n",
+    "- It is important to build a broad domain knowledge to effectively instruct and leverage AI tools."
    ]
   },
   {
