--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -1214,18 +1214,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "## Project background\n",
-    "\n",
-    "Whole genome sequencing in the clinic\n",
-    "- Europe 1+MG project\n",
-    "- Sequencing costs low\n",
-    "- Screening for mutations causing diseases from whole genome sequencing data\n",
-    "\n",
-    "Image: cost per genome"
+    "Note: Cystic fibrosis (CF) is a genetic (inherited) disease that causes sticky, thick mucus to build up in organs, including the lungs and the pancreas. In people who have CF, thick mucus clogs the airways and makes it difficult to breathe. Management includes ways of clearing lungs and a nutrition plan."
    ]
   },
   {
@@ -1236,11 +1229,33 @@
     }
    },
    "source": [
-    "## Cystic fibrosis (CF)\n",
-    "- Hereditary disease\n",
-    "- Affects lungs and digestive system\n",
-    "- Production of thick and sticky mucus \n",
-    "- No cure but symptom management"
+    "### Background\n",
+    "<div style=\"overflow: auto;\">\n",
+    "    <div style=\"float: left; margin-left: 20px; margin-top: 40px;\">\n",
+    "        <img src=\"img/cystic_fibrosis.png\" alt=\"cystic fibrosis\" style=\"width: 500px;\"/>\n",
+    "        <p style=\"font-size: 12px;\">source: mayoclinic.org</p>\n",
+    "    </div>\n",
+    "    <div style=\"font-size: 30px; float: right; margin-left: 0px; margin-top: 0px; max-width: 50%;\">\n",
+    "        <h3>Cystic fibrosis (CF)</h3>\n",
+    "        <ul>\n",
+    "            <li>Genetic inherited disease</li>\n",
+    "            <li>Produces thick and sticky mucus in organs, including lungs and the pancreas</li>\n",
+    "            <li>Clogs the airways of patients and makes them difficult to breathe</li>\n",
+    "            <li>No cure available but only symptom management, such as airway clearance</li>\n",
+    "        </ul>\n",
+    "    </div>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Note: CFTR usually makes a gate for chloride ions, a type of mineral with a negative electrical charge. Chloride moves out of the cell, taking water with it, which thins out mucus and makes it more slippery. In people with CF, gene mutations in CFTR prevent this from happening, so the mucus stays sticky and thick. m"
    ]
   },
   {
@@ -1252,13 +1267,29 @@
    },
    "source": [
     "## Genomic facts of Cystic Fibrosis\n",
-    "- Cystic Fibrosis Transmembrane Conductance Regulator (CFTR)\n",
-    "- Ion channel protein, acting in epithelial cells\n",
-    "- CFTR gene located on chromosome 7 of the human genome\n",
-    "- Over 1,500 mutations known to cause CF\n",
-    "- Non-synonymous (amino acid changing) mutations premature stop codons\n",
+    "- CF is caused by mutations in Cystic Fibrosis Transmembrane Conductance Regulator (CFTR)\n",
+    "- The CFTR protein is an ion channel protein, acting like gates in a cell membrane that control the traffic of molecules through the membrane\n",
+    "- For normal people, CFTR makes a gate for chloride ions. When chloride moves out of the cell, taking water with it, and thus thins mucus\n",
+    "- For CF patients, gene mutations in CFTR prevent this functionality, causing the mucus stays sticky and thick\n",
+    "<img src=\"img/CFTR.jpg\" alt=\"cystic fibrosis\" style=\"width: 300px;\"/>\n",
+    "<p style=\"font-size: 12px;\">source: cff.org</p>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## More about the CFTR gene\n",
     "\n",
-    "Include an image of the protein"
+    "- CFTR gene is located on chromosome 7 of the human genome\n",
+    "- Over 1,500 mutations known to cause CF\n",
+    "- One type of mutations\n",
+    "    - Non-synonymous (with amino acid changing) mutations that generate a premature termination codon (PTC), that further leads to a truncated CFTR protein (shortened length)."
    ]
   },
   {
